cleaned up issues with mongoose virtuals; cleaned up a spelling error
